--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1068,6 +1068,9 @@ SECTION.form-wrapper DIV#for-token-address {
 SECTION.form-wrapper DIV#for-token-address.hidden {
 	display: none;
 }
+P.confirm-answer {
+	display: none;
+}
 /* - checkbox */
 @media screen and (max-width: 700px) {
 	HEADER.main {
