--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ SECTION.form-wrapper INPUT.form-input-text {
 	padding-left: 26px;
 	padding-right: 26px;
 	width: 100%;
-	color: #9283a9;
+	color: #614f7d;
 	-webkit-box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.5);
 	-moz-box-shadow:    0px 0px 3px 0px rgba(50, 50, 50, 0.5);
 	box-shadow:         0px 0px 3px 0px rgba(50, 50, 50, 0.5);			
@@ -1064,7 +1064,7 @@ SECTION.form-wrapper DIV.form-checkbox LABEL {
 	padding-left: 10px;
 	vertical-align:middle;
 	margin-left: 70px;
-	
+	line-height: 32px;
 }
 SECTION.form-wrapper DIV#for-token-address {
 	padding-top: 10px;
