--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,24 @@ ins {background-color: #fcd700; color: #000; text-decoration: none;}
 mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
 
 /* Mozilla dosen't style placeholders by default */
-input:-moz-placeholder { color:#a9a9a9; }
-textarea:-moz-placeholder { color:#a9a9a9; }
-
+::placeholder {
+	color:#e2dee8; 
+}
+::-webkit-input-placeholder {
+	color:#e2dee8; 
+}
+:-ms-input-placeholder {
+	color:#e2dee8; 
+}
+:-ms-input-placeholder {
+	color:#e2dee8; 
+}
+::-moz-placeholder {
+	color:#e2dee8; 
+}
+:-moz-placeholder {
+	color:#e2dee8; 
+}
 /* let's give blockquotes *some* default styling, because unstyled blockquotes are dangerous */
 blockquote {padding: 16px; background: #eee;}
 
