--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,8 @@ SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder>DIV:nth-child(1) {
 	width: 55%;
 	float: left;
 }
-SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder>DIV:nth-child(2) {
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder>DIV:nth-child(2),
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder>DIV:nth-child(3) {
 	width: 45%;
 	float: right;
 	padding-left: 40px;
@@ -317,14 +318,21 @@ SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].inpu
 	padding-right: 90px !important;
 }
 SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-dollar:disabled,
-SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-eth:disabled {
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-eth:disabled,
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-btc:disabled {
 	background-color: #f7f5fa;
 }
-SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-eth {
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-eth,
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-btc {
 	background: url(../img/input-eth.png) no-repeat;
 	background-position: 100% 50%;
 	background-color: #FFFFFF;
 	padding-right: 90px !important;
+}
+SECTION.form-wrapper DIV.form-row.form-dollar-eth-holder INPUT[type="text"].input-btc  {
+  background: url(../img/input-btc.png) no-repeat;
+	background-position: 100% 50%;
+	background-color: #FFFFFF;
 }
 SECTION.form-wrapper UL.form-work-holder LI {
 	margin-bottom: 20px;
